--- a/wp-content/themes/elsey/languages/ja.po
+++ b/wp-content/themes/elsey/languages/ja.po
@@ -3,7 +3,7 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 "Project-Id-Version: Elsey\n"
 "POT-Creation-Date: 2018-01-04 17:56+0530\n"
-"PO-Revision-Date: 2018-02-14 02:55+0900\n"
+"PO-Revision-Date: 2018-02-18 15:44+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -3707,7 +3707,7 @@ msgid "We will notify to %s"
 msgstr "商品が再販売した際に%s宛へお知らせメールが送られます。"
 
 msgid "Already in waitlist"
-msgstr "すでにお気に入りリストに追加されます"
+msgstr "すでに再入荷通知に登録されています"
 
 msgid "You need to login if u will use favorite list."
 msgstr "お気に入り機能を使うにはログインが必要です"
@@ -3723,3 +3723,6 @@ msgstr "マイページ"
 
 msgid "Sign in / Register"
 msgstr "ログイン / 新規登録"
+
+msgid "Payment Status"
+msgstr "支払い状況"
